--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         
         /* Gallery styles - Simple flexbox with wrapping */
         .gallery-container {
+            margin-top: 24px;
             padding: 0 5%;
             max-width: 1400px;
             margin: 0 auto;
@@ -244,18 +245,18 @@
     <script>
         // Sample images from Unsplash (various orientations)
         const imageUrls = [
-            'https://creatorscloud.sony.net/share/a87c3f27348bdf6fb65b',
-            'https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1519699047748-de8e457a634e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1534751516642-a1af1ef26a56?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1524504388940-b1c1722653e1?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60',
-            'https://images.unsplash.com/photo-1544725176-7c40e5a71c5e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
+            './images/ph1.jpg',
+            './images/ph2.jpg',
+            './images/ph3.jpg',
+            './images/ph4.jpg',
+            './images/ph5.jpg',
+            './images/ph6.jpg',
+            './images/ph7.jpg',
+            './images/ph8.jpg',
+            './images/ph9.jpg',
+            './images/ph10.jpg',
+            './images/ph11.jpg',
+            './images/ph12.jpg',
         ];
         
         // Lightbox state
